src/test/deca/syntax/invalid/Lex_test/lex_symbspeciaux_valid.deca
// Test des symboles speciaux
//Resultat : un token par symboles
+ - < > <= >= ! ? = == != * % / . && ||
